added tiny mce api key

--- a/.env
+++ b/.env
@@ -2,5 +2,6 @@ VITE_APPWRITE_URL=https://cloud.appwrite.io/v1
 VITE_APPWRITE_PROJECT_ID=666a63a6000166304f73
 VITE_APPWRITE_DATABASE_ID=666a6c710028445907f3
 VITE_APPWRITE_COLLECTION_ID=6683add900155e131786
-VITE_APPWRITE_BUCKET_ID="6683cbb200319ef1b948"
+VITE_APPWRITE_BUCKET_ID="6683cbb200319ef1b948",
+VITE_APPWRITE_EDITOR_KEY=hyxd2bsdwowdov38aumb0f2rrvncoh303wpc1rntd7kuw8sy
 
